# contact-API

./: main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
migrations/versions/: 850cd41b4e83_initial_migration.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  1259_fsm  16394  16397  16407  16414  16415  16421  16423  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
src/conf/: conf.py  messages.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: user.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_unit_repository_contacts.py
