[project]
name = "rest_api"
version = "0.1.0"
description = "FastAPI REST API project"
authors = [
    { name = "Matviy", email = "krugovcovmatvey@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.2,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.15.0,<2.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "pydantic[email]>=2.11.4,<3.0.0",
    "pydantic-settings>=2.0.3,<3.0.0",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "cloudinary (>=1.44.0,<2.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.3.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=1.6.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
